# sshman

./: LICENSE  README.md  pyproject.toml
sshman/: __init__.py  helpers.py  sshman.py
sshman/config/: config.yaml  connections.yaml
tests/: test_sshman.py
